Fixed bug where input box covered messages

--- a/public/styles.css
+++ b/public/styles.css
@@ -14,6 +14,10 @@ body {
     margin-bottom: 10px;
 }
 
+#messages {
+    margin-bottom: 50px;
+}
+
 #messageBoxContainer {
     position: fixed;
     left: 0px;
